homeassistant/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.ryandev.ru`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
  tls:
    secretName: home-ryandev-ru-tls
